eks/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ccds-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /hikes
          backend:
            serviceName: ccds-hikes-service
            servicePort: 80
        - path: /weather
          backend:
            serviceName: ccds-weather-service
            servicePort: 80
